; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/powerpc/math/extr_fpu_preempt.c_preempt_fpu_c.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/powerpc/math/extr_fpu_preempt.c_preempt_fpu_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@darray = common dso_local global i32* null, align 8
@threads_starting = common dso_local global i32 0, align 4
@running = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @preempt_fpu_c(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = call i32 (...) @pthread_self()
  %5 = call i32 @srand(i32 %4)
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %15, %1
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 21
  br i1 %8, label %9, label %18

9:                                                ; preds = %6
  %10 = call i32 (...) @rand()
  %11 = load i32*, i32** @darray, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  store i32 %10, i32* %14, align 4
  br label %15

15:                                               ; preds = %9
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %6

18:                                               ; preds = %6
  %19 = load i32*, i32** @darray, align 8
  %20 = call i32 @preempt_fpu(i32* %19, i32* @threads_starting, i32* @running)
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i32 @srand(i32) #1

declare dso_local i32 @pthread_self(...) #1

declare dso_local i32 @rand(...) #1

declare dso_local i32 @preempt_fpu(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
